--- a/public/style.css
+++ b/public/style.css
@@ -249,3 +249,10 @@ body {
         margin-bottom: 20px;
     }
 }
+input[type="datetime-local"]::-webkit-datetime-edit-fields-wrapper { 
+    display: none;
+}
+
+input[type="datetime-local"]:focus::-webkit-datetime-edit-fields-wrapper {
+    display: block;
+}
